// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`non-octal-eight-and-nine.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/pull/11852

"\\8","\\9";
() => {
  "use strict";
  "\\8", "\\9";
}

=====================================output=====================================
// https://github.com/babel/babel/pull/11852

"8", "9";
() => {
  "use strict";
  "8", "9";
};

================================================================================
`;

exports[`non-octal-eight-and-nine.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// https://github.com/babel/babel/pull/11852

"\\8","\\9";
() => {
  "use strict";
  "\\8", "\\9";
}

=====================================output=====================================
// https://github.com/babel/babel/pull/11852

"8", "9";
() => {
  "use strict";
  "8", "9";
};

================================================================================
`;

exports[`strings.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
[
  "abc",
  'abc',

  '\\'',

  '"',
  '\\"',
  '\\\\"',

  "'",
  "\\'",
  "\\\\'",

  "'\\"",
  '\\'"',

  '\\\\',
  "\\\\",

  '\\0',
  '🐶',

  '\\uD801\\uDC28',
];

=====================================output=====================================
[
  "abc",
  "abc",

  "'",

  '"',
  '"',
  '\\\\"',

  "'",
  "'",
  "\\\\'",

  "'\\"",
  "'\\"",

  "\\\\",
  "\\\\",

  "\\0",
  "🐶",

  "\\uD801\\uDC28",
];

================================================================================
`;

exports[`strings.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
[
  "abc",
  'abc',

  '\\'',

  '"',
  '\\"',
  '\\\\"',

  "'",
  "\\'",
  "\\\\'",

  "'\\"",
  '\\'"',

  '\\\\',
  "\\\\",

  '\\0',
  '🐶',

  '\\uD801\\uDC28',
];

=====================================output=====================================
[
  "abc",
  "abc",

  "'",

  '"',
  '"',
  '\\\\"',

  "'",
  "'",
  "\\\\'",

  "'\\"",
  "'\\"",

  "\\\\",
  "\\\\",

  "\\0",
  "🐶",

  "\\uD801\\uDC28",
];

================================================================================
`;

exports[`template-literals.js - {"trailingComma":"all"} format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
trailingComma: "all"
                                                                                | printWidth
=====================================input======================================
foo(\`a long string \${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 } with expr\`);

const x = \`a long string \${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + ( function() {return 3 })() + 3 + 2 + 3 + 2 + 3 } with expr\`;

foo(\`a long string \${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + ( function() {
  const x = 5;

  return x;
 })() + 3 + 2 + 3 + 2 + 3 } with expr\`);

pipe.write(
  \`\\n  \${chalk.dim(\`\\u203A and \${more} more \${more} more \${more} more \${more}\`)}\`,
);

// https://github.com/prettier/prettier/issues/1662#issue-230406820
const content = \`
const env = \${ JSON.stringify({
	assetsRootUrl: env.assetsRootUrl,
	env: env.env,
	role: "client",
	adsfafa: "sdfsdff",
	asdfasff: "wefwefw",
  	fefef: "sf sdfs fdsfdsf s dfsfds"
}, null, "\\t") });
\`;

// https://github.com/prettier/prettier/issues/821#issue-210557749
f(\`\${{
  a: 4,
  b: 9,
}}\`);

// https://github.com/prettier/prettier/issues/1183#issue-220863505
const makeBody = (store, assets, html) =>
  \`<!doctype html>\${
    ReactDOMServer.renderToStaticMarkup(
      <Html
        headScripts={compact([ assets.javascript.head ])}
        headStyles={compact([ assets.styles.body, assets.styles.head ])}
        bodyScripts={compact([ assets.javascript.body ])}
        bodyStyles={[]}
        stringScripts={[
          \`window.__INITIAL_STATE__ = \${
            JSON.stringify(store.getState(), null, 2)
          };\`,
        ]}
        content={[
          { id: 'app-container', dangerouslySetInnerHTML: { __html: html } },
        ]}
      />
    )
  }\`

// https://github.com/prettier/prettier/issues/1626#issue-229655106
const Bar = styled.div\`
  color: \${props => (props.highlight.length > 0 ? palette(['text', 'dark', 'tertiary'])(props) : palette(['text', 'dark', 'primary'])(props))} !important;
\`

=====================================output=====================================
foo(
  \`a long string \${
    1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3
  } with expr\`,
);

const x = \`a long string \${
  1 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  (function () {
    return 3;
  })() +
  3 +
  2 +
  3 +
  2 +
  3
} with expr\`;

foo(
  \`a long string \${
    1 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    (function () {
      const x = 5;

      return x;
    })() +
    3 +
    2 +
    3 +
    2 +
    3
  } with expr\`,
);

pipe.write(
  \`\\n  \${chalk.dim(
    \`\\u203A and \${more} more \${more} more \${more} more \${more}\`,
  )}\`,
);

// https://github.com/prettier/prettier/issues/1662#issue-230406820
const content = \`
const env = \${JSON.stringify(
  {
    assetsRootUrl: env.assetsRootUrl,
    env: env.env,
    role: "client",
    adsfafa: "sdfsdff",
    asdfasff: "wefwefw",
    fefef: "sf sdfs fdsfdsf s dfsfds",
  },
  null,
  "\\t",
)});
\`;

// https://github.com/prettier/prettier/issues/821#issue-210557749
f(
  \`\${{
    a: 4,
    b: 9,
  }}\`,
);

// https://github.com/prettier/prettier/issues/1183#issue-220863505
const makeBody = (store, assets, html) =>
  \`<!doctype html>\${ReactDOMServer.renderToStaticMarkup(
    <Html
      headScripts={compact([assets.javascript.head])}
      headStyles={compact([assets.styles.body, assets.styles.head])}
      bodyScripts={compact([assets.javascript.body])}
      bodyStyles={[]}
      stringScripts={[
        \`window.__INITIAL_STATE__ = \${JSON.stringify(
          store.getState(),
          null,
          2,
        )};\`,
      ]}
      content={[
        { id: "app-container", dangerouslySetInnerHTML: { __html: html } },
      ]}
    />,
  )}\`;

// https://github.com/prettier/prettier/issues/1626#issue-229655106
const Bar = styled.div\`
  color: \${(props) =>
    props.highlight.length > 0
      ? palette(["text", "dark", "tertiary"])(props)
      : palette(["text", "dark", "primary"])(props)} !important;
\`;

================================================================================
`;

exports[`template-literals.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo(\`a long string \${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 } with expr\`);

const x = \`a long string \${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + ( function() {return 3 })() + 3 + 2 + 3 + 2 + 3 } with expr\`;

foo(\`a long string \${ 1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + ( function() {
  const x = 5;

  return x;
 })() + 3 + 2 + 3 + 2 + 3 } with expr\`);

pipe.write(
  \`\\n  \${chalk.dim(\`\\u203A and \${more} more \${more} more \${more} more \${more}\`)}\`,
);

// https://github.com/prettier/prettier/issues/1662#issue-230406820
const content = \`
const env = \${ JSON.stringify({
	assetsRootUrl: env.assetsRootUrl,
	env: env.env,
	role: "client",
	adsfafa: "sdfsdff",
	asdfasff: "wefwefw",
  	fefef: "sf sdfs fdsfdsf s dfsfds"
}, null, "\\t") });
\`;

// https://github.com/prettier/prettier/issues/821#issue-210557749
f(\`\${{
  a: 4,
  b: 9,
}}\`);

// https://github.com/prettier/prettier/issues/1183#issue-220863505
const makeBody = (store, assets, html) =>
  \`<!doctype html>\${
    ReactDOMServer.renderToStaticMarkup(
      <Html
        headScripts={compact([ assets.javascript.head ])}
        headStyles={compact([ assets.styles.body, assets.styles.head ])}
        bodyScripts={compact([ assets.javascript.body ])}
        bodyStyles={[]}
        stringScripts={[
          \`window.__INITIAL_STATE__ = \${
            JSON.stringify(store.getState(), null, 2)
          };\`,
        ]}
        content={[
          { id: 'app-container', dangerouslySetInnerHTML: { __html: html } },
        ]}
      />
    )
  }\`

// https://github.com/prettier/prettier/issues/1626#issue-229655106
const Bar = styled.div\`
  color: \${props => (props.highlight.length > 0 ? palette(['text', 'dark', 'tertiary'])(props) : palette(['text', 'dark', 'primary'])(props))} !important;
\`

=====================================output=====================================
foo(
  \`a long string \${
    1 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3 + 2 + 3
  } with expr\`
);

const x = \`a long string \${
  1 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  3 +
  2 +
  (function () {
    return 3;
  })() +
  3 +
  2 +
  3 +
  2 +
  3
} with expr\`;

foo(
  \`a long string \${
    1 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    3 +
    2 +
    (function () {
      const x = 5;

      return x;
    })() +
    3 +
    2 +
    3 +
    2 +
    3
  } with expr\`
);

pipe.write(
  \`\\n  \${chalk.dim(
    \`\\u203A and \${more} more \${more} more \${more} more \${more}\`
  )}\`
);

// https://github.com/prettier/prettier/issues/1662#issue-230406820
const content = \`
const env = \${JSON.stringify(
  {
    assetsRootUrl: env.assetsRootUrl,
    env: env.env,
    role: "client",
    adsfafa: "sdfsdff",
    asdfasff: "wefwefw",
    fefef: "sf sdfs fdsfdsf s dfsfds",
  },
  null,
  "\\t"
)});
\`;

// https://github.com/prettier/prettier/issues/821#issue-210557749
f(
  \`\${{
    a: 4,
    b: 9,
  }}\`
);

// https://github.com/prettier/prettier/issues/1183#issue-220863505
const makeBody = (store, assets, html) =>
  \`<!doctype html>\${ReactDOMServer.renderToStaticMarkup(
    <Html
      headScripts={compact([assets.javascript.head])}
      headStyles={compact([assets.styles.body, assets.styles.head])}
      bodyScripts={compact([assets.javascript.body])}
      bodyStyles={[]}
      stringScripts={[
        \`window.__INITIAL_STATE__ = \${JSON.stringify(
          store.getState(),
          null,
          2
        )};\`,
      ]}
      content={[
        { id: "app-container", dangerouslySetInnerHTML: { __html: html } },
      ]}
    />
  )}\`;

// https://github.com/prettier/prettier/issues/1626#issue-229655106
const Bar = styled.div\`
  color: \${(props) =>
    props.highlight.length > 0
      ? palette(["text", "dark", "tertiary"])(props)
      : palette(["text", "dark", "primary"])(props)} !important;
\`;

================================================================================
`;
